--- a/lights.yaml
+++ b/lights.yaml
@@ -3,9 +3,9 @@
 #################################################################
   - platform: yeelight
     devices:
-      192.168.1.100:
+      192.168.1.110:
         name: Living Room
         transition: 800
-      192.168.1.110:
-        name: Table Light
-        transition: 600
+#      192.168.1.101:
+#        name: Table Light
+#        transition: 600
