--- a/inputs/theme-select.yaml
+++ b/inputs/theme-select.yaml
@@ -1,11 +1,11 @@
 #################################################################
 ## input_select elememts
 #################################################################
-- current_theme:
-  name: 'Current Theme'
-  options:
-   - 'default'
-   - 'dark'
-   - 'midnight'
-  initial: 'default'
-  icon: 'mdi:palette'
+  current_theme:
+    name: 'Current Theme'
+    options:
+      - 'default'
+      - 'dark'
+      - 'midnight'
+    initial: 'default'
+    icon: 'mdi:palette'
