--- a/lights.yaml
+++ b/lights.yaml
@@ -6,6 +6,6 @@
       192.168.1.100:
         name: Living Room
         transition: 800
-#      192.168.1.101:
-#        name: Table Light
-#        transition: 600
+      192.168.1.101:
+        name: Table Light
+        transition: 600
