--- a/switches/commandline.yaml
+++ b/switches/commandline.yaml
@@ -7,4 +7,4 @@
       friendly_name: "Mac Mini"
       command_on: "wakeonlan a8:20:66:11:74:81"
       command_off: "ssh twelve@192.168.1.103 pmset sleepnow"
-      command_state: "ping -c 1 !secret ip_macmini"
+      command_state: "ping -c 192.168.1.103"
