--- a/shell.yaml
+++ b/shell.yaml
@@ -1,6 +1,6 @@
 shutdown_macmini: ssh twelve@192.168.1.103 osascript -e 'tell app "System Events" to shut down'
 restart_macmini: ssh twelve@192.168.1.103 osascript -e 'tell app "System Events" to restart'
-sleep_macmini: 'ssh twelve@192.168.1.103 pmset sleepnow'
+sleep_macmini: "ssh twelve@192.168.1.103 pmset sleepnow"
 speak_goodmorning: tts "Good morning."
 speak_afternoon: tts "Good afternoon."
 speak_evening: tts "Good evening."
