--- a/configuration.yaml
+++ b/configuration.yaml
@@ -89,7 +89,7 @@ sensor: !include_dir_merge_list sensors/
 
 group: !include groups.yaml
 
-automation: !include_dir_merge_list automations/
+automation: !include automations.yaml
 
 light: !include lights.yaml
 
