--- a/automations.yaml
+++ b/automations.yaml
@@ -1,4 +1,5 @@
-- alias: 'Set dark theme for the night'
+- id: Set-Dark-Theme-for-the-night
+  alias: 'Set dark theme for the night'
   initial_state: True
   trigger:
     - platform: sun
@@ -12,7 +13,8 @@
       data:
         name: 'dark'
 
-- alias: 'Set default theme for the day'
+- id: Set-Default-Theme-for-the-day
+  alias: 'Set default theme for the day'
   initial_state: True
   trigger:
     - platform: sun
@@ -26,7 +28,8 @@
       data:
         name: 'default'
 
-- alias: 'Change Current Theme'
+- id: Change-Current-Theme
+  alias: 'Change Current Theme'
   initial_state: 'on'
   trigger:
     - platform: state
