--- a/automations.yaml
+++ b/automations.yaml
@@ -2,8 +2,8 @@
   alias: Set dark theme for the night
   initial_state: true
   trigger:
-  - at: '20:56'
-    platform: time
+  - event: sunset
+    platform: sun
   condition:
   - condition: state
     entity_id: input_boolean.auto_darktheme
