--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,6 +12,9 @@ homeassistant:
   time_zone: Europe/Moscow
   customize: !include customize.yaml
   packages: !include_dir_named packages/
+  customize_domain:
+    switch:
+      homebridge_hidden: false
 
 zone:
   name: Home
