--- a/homebridge/config.json
+++ b/homebridge/config.json
@@ -12,7 +12,7 @@
       "platform": "HomeAssistant",
       "name": "HomeAssistant",
       "host": "http://172.17.0.1:8123",
-      "password": "",
+      "password": "st0ra9e",
       "default_visibility": "visible",
       "supported_types": [
         "binary_sensor",
