--- a/input_select.yaml
+++ b/input_select.yaml
@@ -1,8 +1,19 @@
   current_theme:
     name: 'Current Theme'
     options:
-     - 'default'
-     - 'dark'
-     - 'midnight'
+      - 'default'
+      - 'dark'
+      - 'midnight'
+      - 'pink'
+      - 'deep-purple'
+      - 'indigo'
+      - 'light-blue'
+      - 'teal'
+      - 'light-green'
+      - 'lime'
+      - 'amber'
+      - 'deep-orange'
+      - 'grey'
+      - 'blue-grey'
     initial: 'default'
     icon: 'mdi:palette'
