--- a/sensors/yahoo_finance.yaml
+++ b/sensors/yahoo_finance.yaml
@@ -2,8 +2,8 @@
     symbols:
       - RHT
       - GOOGL
-      - USDRUB=X
-      - EURRUB=X
-      - GBPRUB=X
-      - EURUSD=X
+      - USDRUB
+      - EURRUB
+      - GBPRUB
+      - EURUSD
 
