--- a/switches/wakeonlan.yaml
+++ b/switches/wakeonlan.yaml
@@ -2,6 +2,7 @@
 ## Wake-on-lan switch
 #################################################################
 - platform: wake_on_lan
+  name: "Mac Mini Wake-on-LAN"
   mac_address: "a8:20:66:11:74:81"
   host: !secret ip_macmini
   turn_off:
