--- a/configuration.yaml
+++ b/configuration.yaml
@@ -111,6 +111,7 @@ switch: !include_dir_merge_list switches/
 #    host: 192.168.1.13
 #    username: !secret roomba_blid
 #    password: !secret roomba_password
+#    continuous: True
 
 # Text to speech
 tts:
