--- a/homebridge/config.json
+++ b/homebridge/config.json
@@ -14,6 +14,7 @@
       "host": "http://172.17.0.1:8123",
       "password": "st0ra9e",
       "default_visibility": "visible",
+
       "supported_types": [
         "binary_sensor",
         "climate",
@@ -29,7 +30,8 @@
         "sensor",
         "switch"
       ],
-      "logging": true
+      "logging": true,
+      "verify_ssl": false
     }
   ]
 }
