--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ lib
 deps
 tts
 secrets.yaml
-config.json
-/persist/*
+homebridge/config.json
+homebridge/persist/*.*
 known_devices.yaml
 ip_bans.yaml
 .DS_Store
