--- a/input_select.yaml
+++ b/input_select.yaml
@@ -4,16 +4,13 @@
       - 'default'
       - 'dark'
       - 'midnight'
-      - 'pink'
       - 'deep-purple'
       - 'indigo'
       - 'light-blue'
       - 'teal'
-      - 'light-green'
-      - 'lime'
       - 'amber'
-      - 'deep-orange'
       - 'grey'
       - 'blue-grey'
+      - 'wood'
     initial: 'default'
     icon: 'mdi:palette'
