--- a/configuration.yaml
+++ b/configuration.yaml
@@ -33,7 +33,7 @@ zone 2:
   icon: mdi:worker
 
 # Show links to resources in log and frontend
-introduction:
+#introduction:
 
 # Enables the frontend
 frontend:
