--- a/automations.yaml
+++ b/automations.yaml
@@ -2,56 +2,85 @@
   alias: Set dark theme for the night
   initial_state: true
   trigger:
-  - platform: state 
-    entity_id: sun.sun
-    from: 'below_horizon'
-    to: 'above_horizon'
+    - platform: state 
+      entity_id: sun.sun
+      from: 'below_horizon'
+      to: 'above_horizon'
   condition:
-  - condition: state
-    entity_id: input_boolean.auto_darktheme
-    state: 'on'
+    - condition: state
+      entity_id: input_boolean.auto_darktheme
+      state: 'on'
   action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.current_theme
-      option: 'dark'
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.current_theme
+        option: 'dark'
 
 - id: Set-Default-Theme-for-the-day
   alias: Set default theme for the day
   initial_state: true
   trigger:
-  - platform: sun
-    event: 'sunrise'
-    offset: '-00:30:00'
+    - platform: sun
+      event: 'sunrise'
+      offset: '-00:30:00'
   condition:
-  - condition: state
-    entity_id: input_boolean.auto_darktheme
-    state: 'on'
+    - condition: state
+      entity_id: input_boolean.auto_darktheme
+      state: 'on'
   action:
-  - service: input_select.select_option
-    data:
-      entity_id: input_select.current_theme
-      option: 'default'
+    - service: input_select.select_option
+      data:
+        entity_id: input_select.current_theme
+        option: 'default'
 
 # IF: { input_select current_theme is changed by user OR home assistants boots up } THEN: { set theme to state given by input_select.current_theme }
 - id: Change-Current-Theme
   alias: Change Current Theme
   initial_state: 'on'
   trigger:
-  - platform: state
-    entity_id: input_select.current_theme
-  - platform: homeassistant
-    event: start
+    - platform: state
+      entity_id: input_select.current_theme
+    - platform: homeassistant
+      event: start
   action:
-  - service: frontend.set_theme
-    data_template:
-      'name': '{{states.input_select.current_theme.state}}'
+    - service: frontend.set_theme
+      data_template:
+        'name': '{{states.input_select.current_theme.state}}'
 
-- id: '1503778256404'
-  alias: Morning Lights Wakeup
+- id: Morning-Lights-On
+  alias: Morning Lights On
+  initial_state: 'on'
   trigger:
-  - platform: time
-    at: '8:15'
+    - platform: time
+      at: '8:15'
+  condition:
+    - condition: time
+      weekday:
+        - mon
+        - tue
+        - wed
+        - thu
+        - fri
   action:
-  - service: light.turn_on
-    entity_id: light.living_room
+    - service: light.turn_on
+      entity_id: light.living_room
+
+- id: Morning-Lights-Off
+  alias: Morning Lights Off
+  initial_state: 'on'
+  trigger:
+    - platform: time
+      at: '9:45'
+    - platform: state
+      entity_id: device_tracker.twelves_iphone_6s
+      to: 'not_home'
+  condition:
+    - condition: state
+      entity_id: light.living_room
+      state: 'on'
+    - condition: state
+      entity_id: light.table_light
+      state: 'on'
+  action:
+    - service: light.turn_off
+      entity_id: light.living_room
