--- a/customize.yaml
+++ b/customize.yaml
@@ -30,4 +30,10 @@
       order: "2"
     group.tabSystem:
       order: "3"
+    group.all_automations:
+      hidden: false
+      name: "All Automations"
+    group.all_scripts:
+      hidden: false
+      name: "All Scenes"
 
