--- a/automations.yaml
+++ b/automations.yaml
@@ -84,3 +84,13 @@
   action:
     - service: light.turn_off
       entity_id: light.living_room
+
+- id: Updater
+  alias: 'Update Available Notifications'
+  trigger:
+    platform: state
+    entity_id: updater.updater
+  action:
+    service: notify.notify
+    data:
+      message: 'Update for Home Assistant is available.'
