--- a/configuration.yaml
+++ b/configuration.yaml
@@ -105,13 +105,13 @@ scene: !include scenes.yaml
 
 switch: !include_dir_merge_list switches/
 
-#vacuum:
-#  - platform: roomba
-#    name: Roomba
-#    host: 192.168.1.13
-#    username: !secret roomba_blid
-#    password: !secret roomba_password
-#    continuous: false
+vacuum:
+  - platform: roomba
+    name: Roomba
+    host: 192.168.1.13
+    username: !secret roomba_blid
+    password: !secret roomba_password
+    continuous: false
 
 # Text to speech
 tts:
