--- a/shell.yaml
+++ b/shell.yaml
@@ -2,6 +2,7 @@ shutdown_macmini: ssh twelve@192.168.1.103 osascript -e 'tell app "System Events
 restart_macmini: ssh twelve@192.168.1.103 osascript -e 'tell app "System Events" to restart'
 sleep_macmini2: "ssh -F /config/ssh/config twelve@192.168.1.103 pmset sleepnow"
 sleep_macmini: "ssh twelve@192.168.1.103 pmset sleepnow"
+sleep_nuc: "ssh twelve@192.168.1.107 pmset sleepnow"
 speak_goodmorning: tts "Good morning."
 speak_afternoon: tts "Good afternoon."
 speak_evening: tts "Good evening."
