--- a/configuration.yaml
+++ b/configuration.yaml
@@ -69,6 +69,9 @@ conversation:
 # Enables support for tracking state changes over time
 history:
 
+recorder:
+  purge_keep_days: 31
+
 # View all events in a logbook
 logbook:
   exclude:
