--- a/scenes.yaml
+++ b/scenes.yaml
@@ -2,10 +2,10 @@
     entities:
       group.all_lights: off
       media_player.onkyo_receiver: off
-      switch.mac_mini_wakeonlan: off
+      switch.nuc_wakeonlan: off
 
   - name: I'm home!
     entities:
       group.all_lights: on
       media_player.onkyo_receiver: on
-      switch.mac_mini_wakeonlan: on
+      switch.nuc_wakeonlan: on
