--- a/entity_registry.yaml
+++ b/entity_registry.yaml
@@ -1,20 +1,25 @@
 sensor.twelves_ipad_rd_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_twelves_ipad_rd
 sensor.twelves_iphone_6s_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_twelves_iphone_6s
 sensor.twelves_ipad_rd_battery_level:
+  config_entry_id:
   name:
   platform: ios
   unique_id: level_twelves_ipad_rd
 sensor.twelves_iphone_6s_battery_state:
+  config_entry_id:
   name:
   platform: ios
   unique_id: state_twelves_iphone_6s
 media_player.macmini:
+  config_entry_id: abe817bca0104d63b679c5e5c55e6da2
   name:
   platform: cast
   unique_id: 3bcda6c4-ffdf-4e8c-8a53-d6937630c57c
